--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="box">
         <h2>light / dark mode</h2>
-        <p>let's try it</p>
+        <p>let's try it.</p>
         <div class="btn_wrap">
             <button class="btn_light" onclick="swapStyle('css/light.css')">Light Mode</button>
             <button class="btn_dark" onclick="swapStyle('css/dark.css')">Dark Mode</button>
@@ -21,7 +21,7 @@
 
         // for Local Storage (keep the mode even user reload the page)
         var setTheme = localStorage.getItem('theme')
-        console.log('theme :', setTheme)
+        console.log('theme :', setTheme) 
 
         if (setTheme == null){
             swapStyle('css/light.css')
